--- a/oneliners/static/css/bashoneliners.css
+++ b/oneliners/static/css/bashoneliners.css
@@ -135,6 +135,7 @@ form .required {
 form .input .error ul {
     list-style: none;
     margin-left: 0;
+    padding-left: 0;
 }
 
 form .input .error ul li {
