--- a/oneliners/templates/oneliners/elements/oneliners_searchresults.html
+++ b/oneliners/templates/oneliners/elements/oneliners_searchresults.html
@@ -1,17 +1,17 @@
 {% extends 'oneliners/elements/oneliners.html' %}
 
 {% block oneliners_empty %}
-    <div class="alert alert-block">
+    <div class="alert alert-warning" role="alert">
         <h4 class="alert-heading">No matching one-liners for the query: {{ data.query }}</h4>
 
-        <p><i class="icon-{% if data.match_whole_words %}ok{% else %}remove{% endif %}"></i> Match whole words</p>
+        <p><i class="glyphicon glyphicon-{% if data.match_whole_words %}ok{% else %}remove{% endif %}"></i> Match whole words</p>
 
-        <p><i class="icon-{% if data.match_summary %}ok{% else %}remove{% endif %}"></i> Match summary</p>
+        <p><i class="glyphicon glyphicon-{% if data.match_summary %}ok{% else %}remove{% endif %}"></i> Match summary</p>
 
-        <p><i class="icon-{% if data.match_line %}ok{% else %}remove{% endif %}"></i> Match line</p>
+        <p><i class="glyphicon glyphicon-{% if data.match_line %}ok{% else %}remove{% endif %}"></i> Match line</p>
 
-        <p><i class="icon-{% if data.match_explanation %}ok{% else %}remove{% endif %}"></i> Match explanation</p>
+        <p><i class="glyphicon glyphicon-{% if data.match_explanation %}ok{% else %}remove{% endif %}"></i> Match explanation</p>
 
-        <p><i class="icon-{% if data.match_limitations %}ok{% else %}remove{% endif %}"></i> Match limitations</p>
+        <p><i class="glyphicon glyphicon-{% if data.match_limitations %}ok{% else %}remove{% endif %}"></i> Match limitations</p>
     </div>
 {% endblock %}
